objects/LH__Lookup_Helper_Error__c.object
<CustomObject>
    <fields>
        <fullName>LH__Error_Count__c</fullName>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LH__Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LH__Lookup_Helper_Setting__c</fullName>
        <inlineHelpText>The setting from which this error was created from.</inlineHelpText>
        <label>Lookup Helper Setting</label>
        <referenceTo>LH__Lookup_Helper_Setting__c</referenceTo>
        <relationshipLabel>Lookup Helper Errors</relationshipLabel>
        <relationshipName>Lookup_Helper_Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LH__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LH__Related_Record_Ids__c</fullName>
        <inlineHelpText>The IDs of the records that experienced an exception.</inlineHelpText>
        <label>Related Record Ids</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lookup Helper Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LH__Lookup_Helper_Setting__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LH__Error_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>Lookup Helper Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Helper Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>